# df-enrich

./: README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: api.md  conf.py  examples.md  index.md
examples/: basic_usage.py
src/df_enrich/: __init__.py  accessor.py
tests/: test_accessor.py
