[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "df-enrich"
version = "0.1.0"
description = "Pandas DataFrame accessor for schema-driven validation, derived columns, lookups, and profiling—powered by df-eval."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "elphick", email = ""},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0.0",
    "pandera>=0.17.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0.0",
    "sphinx-book-theme>=1.0.0",
    "myst-parser>=2.0.0",
    "sphinx-autodoc-typehints>=1.24.0",
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/elphick/df-enrich"
Repository = "https://github.com/elphick/df-enrich"
Documentation = "https://github.com/elphick/df-enrich"

[tool.hatch.build.targets.wheel]
packages = ["src/df_enrich"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=df_enrich",
]

[tool.coverage.run]
source = ["src/df_enrich"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
